--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,15 @@
 .hidden {
   display: none;
 }
+
+body {
+  text-align: center;
+  background-color: #c1c1c1;
+}
+
+form {
+  border: solid black;
+  border-width: 5px;
+  padding: 10px;
+
+}
